<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" >
            </FrameLayout>

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/main_radio"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="@drawable/main_bottombar_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bottom_buttom_hpyw"
                    style="@style/bottom_button"
                    android:tag="radio_button2"
                    android:text="@string/bottom_title_hpyw"
                    android:textStyle="bold" />

                <ImageView
                    style="@style/main_footbar_cutline"
                    android:src="@drawable/bottom_cutline" />

                <Button
                    android:id="@+id/bottom_buttom_jrhp"
                    style="@style/bottom_button"
                    android:tag="radio_button2"
                    android:text="@string/bottom_title_jrhp"
                    android:textStyle="bold" />

                <ImageView
                    style="@style/main_footbar_cutline"
                    android:src="@drawable/bottom_cutline" />

                <Button
                    android:id="@+id/bottom_buttom_csmp"
                    style="@style/bottom_button"
                    android:tag="radio_button2"
                    android:text="@string/bottom_title_csmp"
                    android:textStyle="bold" />

                <ImageView
                    style="@style/main_footbar_cutline"
                    android:src="@drawable/bottom_cutline" />

                <Button
                    android:id="@+id/bottom_buttom_more"
                    style="@style/bottom_button"
                    android:tag="radio_button2"
                    android:text="@string/bottom_title_more"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>