<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="#990000" >

        <ImageView
            android:id="@+id/img_netease_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/netease_top"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img_netease_top"
            android:text="@string/bottom_title_hpyw"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/duoyun"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@android:color/white"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/title1"
                    style="@style/main_top_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title1"
                    android:textSize="16sp" />
            </RelativeLayout>

            <ImageView
                style="@style/main_footbar_cutline"
                android:src="@drawable/main_titlebar_cutline" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/title2"
                    style="@style/main_top_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title2"
                    android:textSize="16sp" />
            </RelativeLayout>

            <ImageView
                style="@style/main_footbar_cutline"
                android:src="@drawable/main_titlebar_cutline" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/title3"
                    style="@style/main_top_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title3"
                    android:textSize="16sp" />
            </RelativeLayout>

            <ImageView
                style="@style/main_footbar_cutline"
                android:src="@drawable/main_titlebar_cutline" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/title4"
                    style="@style/main_top_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title4"
                    android:textSize="16sp" />
            </RelativeLayout>

            <ImageView
                style="@style/main_footbar_cutline"
                android:src="@drawable/main_titlebar_cutline" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/title5"
                    style="@style/main_top_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title5"
                    android:textSize="16sp" />
            </RelativeLayout>

            <ImageView
                style="@style/main_footbar_cutline"
                android:src="@drawable/main_titlebar_cutline" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/title6"
                    style="@style/main_top_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title6"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:background="@android:color/white" >
    </RelativeLayout>

    <ListView
        android:id="@+id/categorylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/listitem_news_divider"
        android:fadingEdge="none" >
    </ListView>

</LinearLayout>